[package]
name = "hashhaze"
version = "0.3.1"
authors = ["Balazs Horvath <acsipont@gmail.com>"]
edition = "2024"
description = "A CLI application for generating BlurHash from images"
license = "MIT"

[dependencies]
image = "0.25.5"
clap = { version = "4.5.30", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
num_cpus = "1.16.0"
xio = "0.1.7"
imx = "0.1.4"
anyhow = "1.0.96"

[dev-dependencies]
tempfile = "3.17.1"
tokio-test = "0.4.4"
