[package]
name = "hashhaze"
version = "0.3.2"
authors = ["Balazs Horvath <acsipont@gmail.com>"]
edition = "2024"
description = "A CLI application for generating blurhash from images"
license = "MIT"

[dependencies]
image = "0.25.6"
clap = { version = "4.5.35", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
num_cpus = "1.16.0"
xio = "0.1.11"
imx = "0.1.20"
anyhow = "1.0.97"

[dev-dependencies]
tempfile = "3.19.1"
tokio-test = "0.4.4"
